--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "dev": "nodemon app.js "
   },
   "keywords": [],
   "author": "Lyubov",
   "license": "ISC",
   "dependencies": {
+    "@angularclass/bootloader": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "celebrate": "^12.1.1",
@@ -25,6 +26,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "mongoose-validator": "^2.1.0",
     "validator": "^13.1.1",
+    "webpack-dev-server": "^3.11.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
